# sneaky_pointer

./: .gitignore  CMakeLists.txt  README.md  do  get_total_physical_memory.py  main.cpp  sneaky_pointer.cpp  sneaky_pointer.hpp
include/sneaky_pointer/: sneaky_pointer.hpp
src/: sneaky_pointer.cpp
tests/: sneaky_pointer_tests.cpp
